# git-gcm

./: Makefile  README.md  pyproject.toml  requirements.txt
gcm/: __init__.py  cli.py  git.py  interactive.py  llm.py  prompt.py
