[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-gcm"
version = "2.0.1"
description = "Write Git commits the smart way."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "Luca", email = "yangshaoxiong5545@gmail.com" }]
keywords = ["git", "commit", "message", "ai", "llm", "openai", "gcm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = ["openai>=1.0.0", "python-dotenv>=1.0.0", "questionary>=1.4.0"]

[project.scripts]
gcm = "gcm.cli:main"

[project.urls]
Homepage = "https://github.com/falconluca/gcm"
Repository = "https://github.com/falconluca/gcm"

[tool.setuptools.packages.find]
where = ["."]
include = ["gcm*"]
